# ElastiBody

./: .gitignore  CMakeLists.txt  ElasticBody.cpp  ElasticBody.h  ReadMe.md  bindings.cpp
data/box-3/: adjoint_current.vtk  adjoint_final.vtk  adjoint_step_0.vtk  adjoint_step_000.vtk  adjoint_step_005.vtk  adjoint_step_010.vtk  adjoint_step_015.vtk  adjoint_step_020.vtk  adjoint_step_025.vtk  adjoint_step_030.vtk  adjoint_step_035.vtk  adjoint_step_040.vtk  adjoint_step_045.vtk  adjoint_step_050.vtk  adjoint_step_055.vtk  adjoint_step_060.vtk  adjoint_step_065.vtk  adjoint_step_070.vtk  adjoint_step_075.vtk  adjoint_step_080.vtk  adjoint_step_085.vtk  adjoint_step_090.vtk  adjoint_step_095.vtk  adjoint_step_1.vtk  adjoint_step_10.vtk  adjoint_step_100.vtk  adjoint_step_101.vtk  adjoint_step_102.vtk  adjoint_step_103.vtk  adjoint_step_104.vtk  adjoint_step_105.vtk  adjoint_step_106.vtk  adjoint_step_107.vtk  adjoint_step_108.vtk  adjoint_step_109.vtk  adjoint_step_11.vtk  adjoint_step_110.vtk  adjoint_step_111.vtk  adjoint_step_112.vtk  adjoint_step_113.vtk  (+191 more)
python-sim/: cells.txt  compute_metrics.py  debug_force_check.vtk  env_loader.py  nodes.txt  patch_test.msh  run_forward_sim.py  run_inverse_analysis.py
python-sim/data/: A-1.txt  A-12.txt  A-3.txt  A-6.txt  A-8.txt  A-9.txt  B-10.txt  B-12.txt  B-2.txt  B-4.txt  B-5.txt  B-8.txt  adjoint_result_frame1.vtk  box-3-we-forward.txt  box-3.msh  comparison_frame1.vtk  comparison_frame10.vtk  comparison_frame1_debug.vtk  debug_E_recon_frame1.txt  final_result_lateral_frame10.vtk  final_result_z_deep.vtk  final_result_z_frame1.vtk  force1.txt  force10.txt  force11.txt  force12.txt  force2.txt  force3.txt  force4.txt  force5.txt  force6.txt  force7.txt  force8.txt  force9.txt  forward_verification_frame10.vtk  pnt1.txt  pnt10.txt  pnt11.txt  pnt12.txt  pnt2.txt  (+12 more)
python-sim/data-sampling/box-3-twin/: B-999.txt  E_true.txt  force0.txt  pnt0.txt  pnt999.txt  result_twin_nu49.vtk  result_twin_optimized.vtk
python-sim/output_patch_test/patch_test/: B-0.txt  pnt0.txt
python-sim/sim/: debug_alignment.py
python-sim/sim/geometry/: initializer.py
python-sim/sim/inverse/: adjoint_solver.py  regularization.py  sensitivity.py  solver.py  tensor_solver.py
python-sim/sim/models/: nhookean.py
python-sim/test/Phase2/: test_convergence.py  test_patch_test.py  test_single_element.py
python-sim/test/Phase3/: test_twin_experiment.py
python-sim/test/Phase4/: analyze_bc_frame1.py  analyze_boundary_conditions.py  run_12states_joint_inversion.py  run_adjoint.py  run_inversion_lateral_final.py  run_inversion_z_final.py  run_real_data_inversion.py  (+10 more)
